NetBSD Problem Report #51965

From mlelstv@tazz.1st.de  Sun Feb 12 14:09:40 2017
Return-Path: <mlelstv@tazz.1st.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id A501F7A265
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 12 Feb 2017 14:09:40 +0000 (UTC)
Message-Id: <20170212140916.753D726A13@tazz.1st.de>
Date: Sun, 12 Feb 2017 15:09:16 +0100 (CET)
From: mlelstv@serpens.de
Reply-To: mlelstv@serpens.de
To: gnats-bugs@NetBSD.org
Subject: audio open panics LOCKDEBUG kernel
X-Send-Pr-Version: 3.95

>Number:         51965
>Category:       kern
>Synopsis:       audio open panics LOCKDEBUG kernel
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    nat
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Feb 12 14:10:01 +0000 2017
>Closed-Date:    Tue Mar 14 07:57:17 +0000 2017
>Last-Modified:  Tue Mar 14 07:57:17 +0000 2017
>Originator:     Michael van Elst
>Release:        NetBSD 7.99.59
>Organization:

>Environment:


System: NetBSD tazz 7.99.59 NetBSD 7.99.59 (TAZZ) #5: Sat Feb 11 21:09:06 CET 2017 mlelstv@gossam:/home/netbsd-current/obj.amd64/home/netbsd-current/src/sys/arch/amd64/compile/TAZZ amd64
Architecture: x86_64
Machine: amd64
>Description:
opening /dev/audio on a LOCKDEBUG kernel causes an immediate assert_sleepable
panic.

audioopen() calls audio_open().

audio_open() calls grow_mixer_states() while holding sc->sc_intr_lock.

grow_mixer_states() tries to kmem_zalloc(..., KM_SLEEP) which triggers
the assertion.

You must not sleep while holding a spin mutex.

>How-To-Repeat:
Run something that opens /dev/audio under LOCKDEBUG.

>Fix:


>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->nat
Responsible-Changed-By: nat@NetBSD.org
Responsible-Changed-When: Tue, 14 Feb 2017 09:39:21 +0000
Responsible-Changed-Why:
I'll take this.


From: "Nathanial Sloss" <nat@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51965 CVS commit: src/sys/dev
Date: Tue, 14 Feb 2017 09:41:29 +0000

 Module Name:	src
 Committed By:	nat
 Date:		Tue Feb 14 09:41:29 UTC 2017

 Modified Files:
 	src/sys/dev: audio.c

 Log Message:
 Don't call grow_mixer_states with sc_intr_lock held.

 Addresses PR kern/51965.


 To generate a diff of this commit:
 cvs rdiff -u -r1.305 -r1.306 src/sys/dev/audio.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Tue, 14 Mar 2017 07:45:05 +0000
State-Changed-Why:
Is this fixed?


From: Michael van Elst <mlelstv@serpens.de>
To: gnats-bugs@NetBSD.org
Cc: nat@NetBSD.org, netbsd-bugs@netbsd.org, gnats-admin@netbsd.org,
        dholland@NetBSD.org
Subject: Re: kern/51965 (audio open panics LOCKDEBUG kernel)
Date: Tue, 14 Mar 2017 08:49:27 +0100

 On Tue, Mar 14, 2017 at 07:45:06AM +0000, dholland@NetBSD.org wrote:
 > Synopsis: audio open panics LOCKDEBUG kernel
 > 
 > State-Changed-From-To: open->feedback
 > State-Changed-By: dholland@NetBSD.org
 > State-Changed-When: Tue, 14 Mar 2017 07:45:05 +0000
 > State-Changed-Why:
 > Is this fixed?

 The panic is fixed.


 -- 
                                 Michael van Elst
 Internet: mlelstv@serpens.de
                                 "A potential Snark may lurk in every tree."

State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Tue, 14 Mar 2017 07:57:17 +0000
State-Changed-Why:
fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.