Don't call grow_mixer_states with sc_intr_lock held.

Addresses PR kern/51965.